--- a/Sep2018_MVC/Views/Shared/_Layout.cshtml
+++ b/Sep2018_MVC/Views/Shared/_Layout.cshtml
@@ -1,42 +1,121 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <title>@ViewBag.Title</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/main.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/fontawesome-all.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <!-- Header tiêu đề trang không đụng tới -->
+    <header class="first">
+        <div class="container-fluid">
+            <div class="row first_one_row">
+                <div class="container first_one">
+                    <div class="col-md-4">
+                        <img class="img-responsive" src="/images/logo.png">
+                    </div>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+            <div class="row first_two_row">
+                <div class="container first_two_con">
+                    <div class="col-md-12 first_two_div_main">
+                        <div class="col-md-4">
+                            <ul class="first_two_ul" type="none">
+                                <li><i class="fas fa-home fa-3x"></i></li>
+                                <li><a href="#">Cổng trực tuyến</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                                    Xem Điểm
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K19T</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K20T</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Khoá K21T</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+                                    Xem Điểm Danh
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Caculus 1</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Caculus 2</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">ComputerScient</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Intro to DataBase</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Intro to NetWork</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">QTDN - Tập làm cha</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">English</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    </header>
+    <!-- Viết vào phần này là phần thân wapper -->
+    @RenderBody()
+    <!-- Banner -->
+    <div class="container-fluid">
+        <div class="row four_row">
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+        </div>
+    </div>
+    <!-- Footer phần cuối cùng không đụng tới -->
+    <footer class="container-fluid">
+        <div class="row footer_row">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <!-- Điền nội dung vào sau -->
+                        <h3>Cần content cụ thể ?</h3>
+                        <h3>&ensp;||</h3>
+                        <h3>&ensp;||</h3>
+                        <h3>&ensp;||</h3>
+                        <h3>\\&ensp;//</h3>
+                        <h3>&ensp;=</h3>
+
+                    </div>
+                    <div class="col-md-6">
+                        <div class="col-md-12 footer_right">
+                            <p>Văn Lang University</p>
+                            <ul class="footer_right_ul" type="none">
+                                <li>
+                                    <strong>Trụ sở 1:</strong> Nguyễn Khắc Nhu Quận 1
+                                    <ul>
+                                        <li>ĐT: 113</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <strong>Trụ sở 2:</strong> Bình Thạnh
+                                    <ul>
+                                        <li>ĐT: 113</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <strong>Trụ sở 3:</strong> Gò Vấp
+                                    <ul>
+                                        <li>ĐT: 113</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="~/Scripts/jquery.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
