Create Areas Admin for Teacher but not template because waiting for Khai

--- a/Sep2018_MVC/Areas/Admin/Views/Staff/CheckOnline.cshtml
+++ b/Sep2018_MVC/Areas/Admin/Views/Staff/CheckOnline.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "CheckOnline";
+    Layout = "~/Areas/Admin/Views/Shared/_layoutAdmin.cshtml";
 }
 
 <div class="container-fluid">
