--- a/Sep2018_MVC/Areas/Admin/Views/Staff/CreateSection.cshtml
+++ b/Sep2018_MVC/Areas/Admin/Views/Staff/CreateSection.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "CreateSection";
+    Layout = "~/Areas/Admin/Views/Shared/_layoutAdmin.cshtml";
 }
 
 
@@ -17,7 +18,7 @@
                         <form action="#" method="POST">
                             <div class="form-group col-md-12">
                                 <label class="control-label col-sm-3">Lớp:</label>
-                                <div class="col-sm-7">
+                                <div class="col-sm-9">
                                     <select class="form-control">
                                         <option>K21T1</option>
                                         <option>K21T2</option>
@@ -27,7 +28,7 @@
                             </div>
                             <div class="form-group col-md-12">
                                 <label class="control-label col-sm-3" for="pwd">Môn học:</label>
-                                <div class="col-sm-7">
+                                <div class="col-sm-9">
                                     <select class="form-control">
                                         <option>Application Development Pracitices</option>
                                         <option>Calculus 1</option>
@@ -44,21 +45,19 @@
                                 </div>
                             </div>
                             <div class="form-group col-md-12">
-                                <label class="control-label col-sm-3">Từ ngày:</label>
-                                <div class="col-sm-5">
-                                    <input class="form-control" type="date" name="txt_datefrom">
-                                </div>
-                                <div class="col-sm-4">
-                                    <input class="form-control" type="time" name="txt_timefrom">
+                                <label class="control-label col-sm-3">Ngày:</label>
+                                <div class="col-sm-9">
+                                    <input class="form-control" type="date" name="txt_date">
                                 </div>
                             </div>
                             <div class="form-group col-md-12">
-                                <label class="control-label col-sm-3">Đến ngày:</label>
-                                <div class="col-sm-5">
-                                    <input class="form-control" type="date" name="txt_dateto">
-                                </div>
+                                <label class="control-label col-sm-3">Thời gian:</label>
                                 <div class="col-sm-4">
-                                    <input class="form-control" type="time" name="txt_timeto">
+                                    <input class="form-control" type="time" name="txt_timefrom">
+                                </div>
+                                <span class=" col-sm-1"><i class="fas fa-long-arrow-alt-right "></i></span>
+                                <div class="col-sm-4">
+                                    <input class="form-control" type="time" name="txt_timeto">  
                                 </div>
                             </div>
                             <div class="form-group col-md-12">
