--- a/Sep2018_MVC/Areas/Admin/Views/Staff/Notifi.cshtml
+++ b/Sep2018_MVC/Areas/Admin/Views/Staff/Notifi.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Notifi";
+    Layout = "~/Areas/Admin/Views/Shared/_layoutAdmin.cshtml";
 }
 
 <div class="container-fluid">
