--- a/Sep2018_MVC/Areas/Admin/Views/Staff/CreateSection.cshtml
+++ b/Sep2018_MVC/Areas/Admin/Views/Staff/CreateSection.cshtml
@@ -1,74 +1,93 @@
-﻿
-@{
-    ViewBag.Title = "CreateSection";
-    Layout = "~/Areas/Admin/Views/Shared/_layoutAdmin.cshtml";
-}
+﻿@using Sep2018_MVC.Models
+@model List<Course>
+    @{
+        ViewBag.Title = "CreateSection";
+        Layout = "~/Areas/Admin/Views/Shared/_layoutAdmin.cshtml";
+        List<Course> meoCourse = new List<Course>();
+        meoCourse = (List<Course>)ViewData["meoCourse"];
+        List<Class> meoClass = new List<Class>();
+        meoClass = (List<Class>)ViewData["meoClass"];
+        List<Subject> meoSubject = new List<Subject>();
+        meoSubject = (List<Subject>)ViewData["meoSubject"];
+    }
 
 
-<div class="container-fluid">
-    <!-- Viết nội dung vào đây -->
-    <div class="row">
-        <div class="col-md-12 section_first">
-            <h1>Tạo phiên điểm danh</h1>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 section_second">
-                    <div class="col-md-12">
-                        <form action="#" method="POST">
-                            <div class="form-group col-md-12">
-                                <label class="control-label col-sm-3">Lớp:</label>
-                                <div class="col-sm-9">
-                                    <select class="form-control">
-                                        <option>K21T1</option>
-                                        <option>K21T2</option>
-                                        <option>K21T3</option>
-                                    </select>
+    <div class="container-fluid">
+        <!-- Viết nội dung vào đây -->
+        <div class="row">
+            <div class="col-md-12 section_first">
+                <h1>Tạo phiên điểm danh</h1>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 section_second">
+                        <div class="col-md-12">
+                            <form action="#" method="POST">
+                                <div class="form-group col-md-12">
+                                    <label class="control-label col-sm-3">Khoá:</label>
+                                    <div class="col-sm-9">
+                                        <select class="form-control">
+
+                                            @foreach (var item in meoCourse)
+                                            {
+                                                <option id="@item.id">@item.CourseName</option>
+                                            }
+                                        </select>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label class="control-label col-sm-3" for="pwd">Môn học:</label>
-                                <div class="col-sm-9">
-                                    <select class="form-control">
-                                        <option>Application Development Pracitices</option>
-                                        <option>Calculus 1</option>
-                                        <option>Calculus 2</option>
-                                        <option>Computer Science for P.E</option>
-                                        <option>FoC01(K21T)</option>
-                                        <option>Fundamentals of Computing 2 - K21T</option>
-                                        <option>Group Dynamics &amp; Communication - K21T</option>
-                                        <option>Hội thi SV Văn Lang với truyền thống Đạo đức - Ý chí - Sáng tạo</option>
-                                        <option>Intro to Database - K21T</option>
-                                        <option>Introduction to Network &amp; Telecommunication - K21T</option>
-                                        <option>Introduction to Software Engineering - K21T</option>
-                                    </select>
+                                <div class="form-group col-md-12">
+                                    <label class="control-label col-sm-3">Lớp:</label>
+                                    <div class="col-sm-9">
+                                        <select class="form-control">
+                                            @foreach (var item in meoClass)
+                                            {
+                                                <option id="@item.id">@item.ClassName</option>
+                                            }
+                                        </select>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label class="control-label col-sm-3">Ngày:</label>
-                                <div class="col-sm-9">
-                                    <input class="form-control" type="date" name="txt_date">
+                                <div class="form-group col-md-12">
+                                    <label class="control-label col-sm-3" for="pwd">Môn học:</label>
+                                    <div class="col-sm-9">
+                                        <select class="form-control">
+                                            @foreach (var item in meoSubject)
+                                            {
+                                                <option id="@item.id">@item.SubjectName</option>
+                                            }
+                                        </select>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label class="control-label col-sm-3">Thời gian:</label>
-                                <div class="col-sm-4">
-                                    <input class="form-control" type="time" name="txt_timefrom">
+                                <div class="form-group col-md-12">
+                                    <label class="control-label col-sm-3">Ngày:</label>
+                                    <div class="col-sm-9">
+                                        <input class="form-control" type="date" name="txt_date">
+                                    </div>
                                 </div>
-                                <span class=" col-sm-1"><i class="fas fa-long-arrow-alt-right "></i></span>
-                                <div class="col-sm-4">
-                                    <input class="form-control" type="time" name="txt_timeto">  
+                                <div class="form-group col-md-12">
+                                    <label class="control-label col-sm-3">Thời gian:</label>
+                                    <div class="col-sm-4">
+                                        <input class="form-control" type="time" name="txt_timefrom">
+                                    </div>
+                                    <span class=" col-sm-1"><i class="fas fa-long-arrow-alt-right "></i></span>
+                                    <div class="col-sm-4">
+                                        <input class="form-control" type="time" name="txt_timeto">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <div class="col-sm-offset-3 col-sm-8">
-                                    <button type="submit" class="btn btn-default">Tạo</button>
+                                <div class="form-group col-md-12">
+                                    <label class="control-label col-sm-3">Số tiết:</label>
+                                    <div class="col-sm-4">
+                                        <input class="form-control" type="number" placeholder="2" name="txt_tiet" />
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
+                                <div class="form-group col-md-12">
+                                    <div class="col-sm-offset-3 col-sm-8">
+                                        <button type="submit" class="btn btn-default">Tạo</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
