CheckOnline From CreateSection 30%

--- a/Sep2018_MVC/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Sep2018_MVC/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -684,6 +684,7 @@
     <script src="~/Areas/Admin/Assert/Script/jquery.dcjqaccordion.2.7.js"></script>
     <script src="~/Areas/Admin/Assert/Script/jquery.scrollTo.min.js"></script>
     <script src="~/Areas/Admin/Assert/Script/jquery.nicescroll.js"></script>
+    <script src="~/Areas/Admin/Assert/Script/jquery.sparkline.js"></script>
     <script src="~/Areas/Admin/Assert/Script/sparkline-chart.js"></script>
 </body>
 </html>
