--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
@@ -12,7 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="~/Areas/Staff/Assert/Styles/bootstrap.css" rel="stylesheet" />
     <!--external css-->
-
+    <link href="~/Areas/Staff/Assert/Styles/admin.css" rel="stylesheet" />
 
     <link href="~/Areas/Staff/Assert/Styles/font-awesome.css" rel="stylesheet" />
 
@@ -23,7 +23,7 @@
     <link href="~/Areas/Staff/Assert/Styles/styleAdmin.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
-
+    
 
     <link href="~/Areas/Staff/Assert/Styles/style1.css" rel="stylesheet" />
 
