--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/CheckOnline.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/CheckOnline.cshtml
@@ -15,7 +15,7 @@
         </div>
         <div class="col-md-offset-2 col-md-8">
             <table id="table" class="table ">
-                <tr>
+                <tr class="trth">
                     <th>STT</th>
                     <th>MSSV</th>
                     <th>Lớp</th>
