--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/CreateAccount.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/CreateAccount.cshtml
@@ -11,7 +11,7 @@
     <form name="xuly" action="" method="post">
         <table border="0" cellpadding="0" cellspacing="0">
             <tr class="table">
-                <td class="left"><p> MaSo </p></td>
+                <td class="left"><p> Mã số </p></td>
                 <td class="right"><p><input type="text" name="taikhoan"></p></td>
             </tr>
             <tr class="table">
