chinh sua layout Staff

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
@@ -211,7 +211,7 @@
             <div id="sidebar" class="nav-collapse ">
                 <!-- sidebar menu start-->
                 @RenderPage("_SiderBarStaff.cshtml")
-                @RenderPage("_SiderBarTeacher.cshtml")
+                @*@RenderPage("_SiderBarTeacher.cshtml")*@
                 <!-- sidebar menu end-->
             </div>
         </aside>
