--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
@@ -6,7 +6,8 @@
         </a>
     </p>
     @*<h5 class="centered">Marcel Newman</h5>*@
-    <img src="~/Areas/Staff/Assert/Images/Identity_VI.png" class="img-responsive"/>
+    <img src="~/Areas/Staff/Assert/Images/Identity_VI.png" class="img-responsive" />
+  
     <li class="mt">
         <a class="active" href="#">
             <i class="fa fa-dashboard"></i>
@@ -14,68 +15,33 @@
         </a>
     </li>
 
+    <li class="statis">
+        <a class="active" href="#">
+            <i class="fa fa-dashboard"></i>
+            <span>Statistic</span>
+        </a>
+    </li>
+
+    <li class="rp">
+        <a class="active" href="#">
+            <i class="fa fa-dashboard"></i>
+            <span>Report</span>
+        </a>
+    </li>
+
     <li class="sub-menu">
         <a href="javascript:;">
             <i class="fa fa-desktop"></i>
-            <span>Danh sách</span>
+            <span>View attendance</span>
         </a>
         <ul class="sub">
-            <li><a href="general.html">Sinh Viên</a></li>
-            <li><a href="buttons.html">Giảng Viên</a></li>
+            <li>@Html.ActionLink("Course 20", "khoa20", "Course")</li>
+            <li>@Html.ActionLink("Course 21", "khoa21", "Course")</li>
+            <li>@Html.ActionLink("Course 22", "khoa22", "Course")</li>
+            <li>@Html.ActionLink("Course 23", "khoa23", "Course")</li>
 
         </ul>
     </li>
 
-    <li class="sub-menu">
-        <a href="javascript:;">
-            <i class="fa fa-cogs"></i>
-            <span>Components</span>
-        </a>
-        <ul class="sub">
-            <li><a href="calendar.html">Calendar</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="todo_list.html">Todo List</a></li>
-        </ul>
-    </li>
-    <li class="sub-menu">
-        <a href="javascript:;">
-            <i class="fa fa-book"></i>
-            <span>Extra Pages</span>
-        </a>
-        <ul class="sub">
-            <li><a href="blank.html">Blank Page</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="lock_screen.html">Lock Screen</a></li>
-        </ul>
-    </li>
-    <li class="sub-menu">
-        <a href="javascript:;">
-            <i class="fa fa-tasks"></i>
-            <span>Forms</span>
-        </a>
-        <ul class="sub">
-            <li><a href="form_component.html">Form Components</a></li>
-        </ul>
-    </li>
-    <li class="sub-menu">
-        <a href="javascript:;">
-            <i class="fa fa-th"></i>
-            <span>Data Tables</span>
-        </a>
-        <ul class="sub">
-            <li><a href="basic_table.html">Basic Table</a></li>
-            <li><a href="responsive_table.html">Responsive Table</a></li>
-        </ul>
-    </li>
-    <li class="sub-menu">
-        <a href="javascript:;">
-            <i class=" fa fa-bar-chart-o"></i>
-            <span>Charts</span>
-        </a>
-        <ul class="sub">
-            <li><a href="morris.html">Morris</a></li>
-            <li><a href="chartjs.html">Chartjs</a></li>
-        </ul>
-    </li>
 
 </ul>
