--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -33,7 +33,7 @@
     <li class="sub-menu">
         <a href="javascript:;">
             <i class="fa fa-desktop"></i>
-            <span>Course</span>
+            <span>Attendance</span>
         </a>
         <ul class="sub">
             <li>@Html.ActionLink("Course 20", "khoa20", "Course")</li>
