View ChangePassword and download excel

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -23,10 +23,10 @@
         </a>
     </li>
 
-    <li class="forgot">
-        <a class="active" href="#">
+    <li class="change">
+        <a class="active" href="~/Staff/AccountStaff/ChangePassword">
             <i class="fa fa-dashboard"></i>
-            <span>Forgot password</span>
+            <span>Change password</span>
         </a>
     </li>
 
