--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/CheckOnline.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/CheckOnline.cshtml
@@ -85,6 +85,7 @@
                 </tr>
           
             </table>
+            <ul ><button style="margin-left:230px" type="Lưu" class="btn btn-default">Download File</button></ul>
         </div>
     </div>
 </div>
