HTTP POST CheckOnline

--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/CheckOnline.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/CheckOnline.cshtml
@@ -8,7 +8,7 @@
     <!-- Viết nội dung vào đây -->
     <div class="row">
         <div class="col-md-12">
-            <h3>K21T1 - ComputerScient</h3>
+            <h3>K21T1 - ComputerScient - 05/17/2018</h3>
         </div>
         <div class="col-md-12 first">
             <h1>Danh sách điểm danh sinh viên</h1>
