add view con GVien, GVu

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
@@ -9,9 +9,9 @@
     <img src="~/Areas/Staff/Assert/Images/Identity_VI.png" class="img-responsive" />
   
     <li class="mt">
-        <a class="active" href="#">
+        <a class="active" href="/Staff/Teacher/CreateAccount">
             <i class="fa fa-dashboard"></i>
-            <span>Tạo Tài Khoản</span>
+            <span>Create Account</span>
         </a>
     </li>
 
