--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -9,8 +9,16 @@
     @*<h5 class="centered">Marcel Newman</h5>*@
     <img src="~/Areas/Staff/Assert/Images/Identity_VI.png" class="img-responsive" />
     <h1> </h1>
+
+    <li class="IA">
+        <a class="active" href="/Staff/Teacher/InformationAccount">
+            <i class="fa fa-dashboard"></i>
+            <span>Information Account</span>
+        </a>
+    </li>
+    
     <li class="noti">
-        <a class="active" href="#">
+        <a class="active" href="/Staff/Teacher/Notifi">
             <i class="fa fa-dashboard"></i>
             <span>Notification</span>
         </a>
@@ -36,10 +44,10 @@
             <span>Attendance</span>
         </a>
         <ul class="sub">
-            <li>@Html.ActionLink("Course 20", "khoa20", "Course")</li>
-            <li>@Html.ActionLink("Course 21", "khoa21", "Course")</li>
-            <li>@Html.ActionLink("Course 22", "khoa22", "Course")</li>
-            <li>@Html.ActionLink("Course 23", "khoa23", "Course")</li>
+            <li>@Html.ActionLink("Course 20", "Course", "Staff")</li>
+            <li>@Html.ActionLink("Course 21", "Course", "Staff")</li>
+            <li>@Html.ActionLink("Course 22", "Course", "Staff")</li>
+            <li>@Html.ActionLink("Course 23", "Course", "Staff")</li>
         </ul>
     </li>
 
