View History cho Giang Vien

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
@@ -210,9 +210,9 @@
         <aside>
             <div id="sidebar" class="nav-collapse ">
                 <!-- sidebar menu start-->
-                @RenderPage("_SiderBarStaff.cshtml")
-                @*@RenderPage("_SiderBarTeacher.cshtml")*@
-                <!-- sidebar menu end-->
+                @*@RenderPage("_SiderBarStaff.cshtml")*@
+                @RenderPage("_SiderBarTeacher.cshtml")
+                <!-- sidebar menu end-->    
             </div>
         </aside>
         <!--sidebar end-->
