--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -16,7 +16,7 @@
             <span>Information Account</span>
         </a>
     </li>
-    
+
     <li class="noti">
         <a class="active" href="/Staff/Teacher/Notifi">
             <i class="fa fa-dashboard"></i>
@@ -28,6 +28,13 @@
         <a class="active" href="#">
             <i class="fa fa-dashboard"></i>
             <span>Schedule</span>
+        </a>
+    </li>
+
+    <li class="history">
+        <a class="active" href="/Staff/Teacher/History">
+            <i class="fa fa-dashboard"></i>
+            <span>History</span>
         </a>
     </li>
 
