upload information account and view con cua Gvu, Gvien

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
@@ -210,8 +210,8 @@
         <aside>
             <div id="sidebar" class="nav-collapse ">
                 <!-- sidebar menu start-->
-                @*@RenderPage("_SiderBarStaff.cshtml")*@
-                @RenderPage("_SiderBarTeacher.cshtml")
+                @RenderPage("_SiderBarStaff.cshtml")
+                @*@RenderPage("_SiderBarTeacher.cshtml")*@
                 <!-- sidebar menu end-->    
             </div>
         </aside>
