--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarStaff.cshtml
@@ -7,11 +7,20 @@
     </p>
     @*<h5 class="centered">Marcel Newman</h5>*@
     <img src="~/Areas/Staff/Assert/Images/Identity_VI.png" class="img-responsive" />
-  
+
+
+
     <li class="mt">
         <a class="active" href="/Staff/Teacher/CreateAccount">
             <i class="fa fa-dashboard"></i>
             <span>Create Account</span>
+        </a>
+    </li>
+
+    <li class="IA">
+        <a class="active" href="/Staff/AccountStaff/InformationAccountStaff">
+            <i class="fa fa-dashboard"></i>
+            <span>Information Account</span>
         </a>
     </li>
 
