--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/Course.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/Course.cshtml
@@ -4,5 +4,34 @@
     Layout = "~/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Course</h2>
+<div class="body">
+
+    <center><h1>DANH SÁCH MÔN HỌC</h1></center>
+    <h2>Khóa 20</h2>
+    <form name="xuly" action="" method="post">
+        <table border="0" cellpadding="0" cellspacing="0"></table>
+    </form>
+    <div class="SPaQM col-sm-12">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown ">
+            Software Process and Quality Management
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu-softwaretesting">
+            <li><a href="#">K20T1</a></li>
+        </ul>
+    </div>
+
+    <div class="SProject col-sm-12">
+        <button class="btn btn-primary" type="button" data-toggle="dropdown" ">
+            Softwware Project
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu-softwaretesting">
+            <li><a href="#">K20T1</a></li>
+        </ul>
+    </div>
+
+
+
+</div>
 
