--- a/Sep2018_MVC/Areas/Staff/Views/AccountStaff/Index.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/AccountStaff/Index.cshtml
@@ -15,17 +15,13 @@
     <title>Admin</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="~/Areas/Staff/Assert/Styles/bootstrap.css" rel="stylesheet" />
-    @*<link href="assets/css/bootstrap.css" rel="stylesheet">*@
+    <link href="~/Areas/Staff/Assert/Styles/bootstrap.css" rel="stylesheet" /> 
     <!--external css-->
     <link href="~/Areas/Staff/Assert/Styles/font-awesome.css" rel="stylesheet" />
-    @*<link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />*@
-
     <!-- Custom styles for this template -->
     <link href="~/Areas/Staff/Assert/Styles/style1.css" rel="stylesheet" />
-    @*<link href="assets/css/style.css" rel="stylesheet">*@
     <link href="~/Areas/Staff/Assert/Styles/style-responsive.css" rel="stylesheet" />
-    @*<link href="assets/css/style-responsive.css" rel="stylesheet">*@
+   
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -51,7 +47,7 @@
                     <input type="password" class="form-control" placeholder="Password">
                     <label class="checkbox">
                         <span class="pull-right">
-                            <a data-toggle="modal" href="login.html#myModal"> Forgot Password?</a>
+                            <a data-toggle="modal" href="login.html#myModal">Quên mật khẩu?</a>
 
                         </span>
                     </label>
@@ -78,10 +74,12 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                <h4 class="modal-title">Forgot Password ?</h4>
+                                <h4 class="modal-title">Quên mật khẩu ?</h4>
                             </div>
                             <div class="modal-body">
-                                <p>Enter your e-mail address below to reset your password.</p>
+                                <p>
+                                    Nhập địa chỉ email của bạn dưới đây để đặt lại mật khẩu của bạn.
+                                </p>
                                 <input type="text" name="email" placeholder="Email" autocomplete="off" class="form-control placeholder-no-fix">
 
                             </div>
@@ -102,12 +100,11 @@
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="~/Areas/Staff/Assert/Script/jquery.js"></script>
     <script src="~/Areas/Staff/Assert/Script/bootstrap.min.js"></script>
-    @*<script src="assets/js/jquery.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>*@
 
     <!--BACKSTRETCH-->
     <!-- You can use an image of whatever size. This script will stretch to fit in any screen size.-->
-    <script type="text/javascript" src="assets/js/jquery.backstretch.min.js"></script>
+    <script src="~/Areas/Staff/Assert/Script/jquery.backstretch.min.js"></script>
+   
     <script>
         $.backstretch("assets/img/login-bg.jpg", { speed: 500 });
     </script>
